--- a/CubeDraftBot.csproj
+++ b/CubeDraftBot.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.3.1"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1"/>
   </ItemGroup>
 </Project>
